add header and footer styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,30 +19,34 @@
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" target="_self" class="logo"
-        >Web<span class="logo-header">Studio</span></a
-      >
+      <div class="container">
+        <a href="./index.html" target="_self" class="logo"
+          >Web<span class="logo-header">Studio</span></a
+        >
 
-      <nav>
-        <ul>
-          <li><a href="./index.html" target="_self" class="menu-item">Студия</a></li>
-          <li>
-            <a href="./portfolio.html" target="_self" class="menu-item menu-item-current"
-              >Портфолио</a
-            >
+        <nav>
+          <ul class="header-menu">
+            <li class="item">
+              <a href="./index.html" target="_self" class="menu-item">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" target="_self" class="menu-item menu-item-current"
+                >Портфолио</a
+              >
+            </li>
+            <li class="item"><a href="" class="menu-item">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="header-links">
+          <li class="item">
+            <a href="mailto:info@example.com" class="header-link">info@example.com</a>
           </li>
-          <li><a href="" class="menu-item">Контакты</a></li>
+          <li class="item">
+            <a href="tel:+380991111111" class="header-link">+38 099 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul>
-        <li>
-          <a href="mailto:info@example.com" class="header-link">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="header-link">+38 099 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="projects-section">
@@ -171,20 +175,26 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" target="_self" class="logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/YMUEQzxHdwpRwmDM9" class="footer-link post-address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" target="_self" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="footer-links">
+            <li class="item">
+              <a href="https://goo.gl/maps/YMUEQzxHdwpRwmDM9" class="footer-link post-address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
