add section styles

--- a/index.html
+++ b/index.html
@@ -47,94 +47,91 @@
       </div>
     </header>
     <main>
-      <section class="hero-section">
-        <h1 class="hero-section-title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button" class="order-button">Заказать услугу</button>
+      <section class="hero section">
+        <div class="container">
+          <h1 class="hero-section-title">Эффективные решения<br />для вашего бизнеса</h1>
+          <button type="button" class="order-button">Заказать услугу</button>
+        </div>
       </section>
 
-      <section class="feature-section">
-        <h2 class="section-title visually-hidden">Наши преимущества</h2>
-        <ul class="feature-list">
-          <li class="feature">
-            <h3 class="feature-title">Внимание к деталям</h3>
-            <p class="feature-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-title">Пунктуальность</h3>
-            <p class="feature-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-title">Планирование</h3>
-            <p class="feature-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-title">Современные технологии</h3>
-            <p class="feature-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="container">
+          <h2 class="section-title visually-hidden">Наши преимущества</h2>
+          <ul class="feature list">
+            <li class="item">
+              <h3 class="feature-title">Внимание к деталям</h3>
+              <p class="feature-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+
+            <li class="item">
+              <h3 class="feature-title">Пунктуальность</h3>
+              <p class="feature-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="feature-title">Планирование</h3>
+              <p class="feature-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="feature-title">Современные технологии</h3>
+              <p class="feature-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="activity-section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="activity-list">
-          <li class="activity"><img src="./images/web.jpg" alt="Web" width="370" /></li>
-          <li class="activity"><img src="./images/uxui.jpg" alt="UX/UI" width="370" /></li>
-          <li class="activity"><img src="./images/color.jpg" alt="Color" width="370" /></li>
-        </ul>
+      <section class="activitys section">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="activity list">
+            <li class="item"><img src="./images/web.jpg" alt="Web" width="370" /></li>
+            <li class="item"><img src="./images/uxui.jpg" alt="UX/UI" width="370" /></li>
+            <li class="item"><img src="./images/color.jpg" alt="Color" width="370" /></li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-member">
-            <img
-              src="./images/idemianenko.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              class="team-member-photo"
-            />
-            <h3 class="team-member-name">Игорь Демьяненко</h3>
-            <p lang="en" class="team-member-position">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/orepina.jpg"
-              alt="Ольга Репина"
-              width="270"
-              class="team-member-photo"
-            />
-            <h3 class="team-member-name">Ольга Репина</h3>
-            <p lang="en" class="team-member-position">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/mtarasov.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              class="team-member-photo"
-            />
-            <h3 class="team-member-name">Николай Тарасов</h3>
-            <p lang="en" class="team-member-position">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/myermakov.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              class="team-member-photo"
-            />
-            <h3 class="team-member-name">Михаил Ермаков</h3>
-            <p lang="en" class="team-member-position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-members list">
+            <li class="item">
+              <img src="./images/idemianenko.jpg" alt="Игорь Демьяненко" width="270" />
+              <div class="team-member">
+                <h3 class="team-member-name">Игорь Демьяненко</h3>
+                <p lang="en" class="team-member-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/orepina.jpg" alt="Ольга Репина" width="270" />
+              <div class="team-member">
+                <h3 class="team-member-name">Ольга Репина</h3>
+                <p lang="en" class="team-member-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/mtarasov.jpg" alt="Николай Тарасов" width="270" />
+              <div class="team-member">
+                <h3 class="team-member-name">Николай Тарасов</h3>
+                <p lang="en" class="team-member-position">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/myermakov.jpg" alt="Михаил Ермаков" width="270" />
+              <div class="team-member">
+                <h3 class="team-member-name">Михаил Ермаков</h3>
+                <p lang="en" class="team-member-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
