--- a/portfolio.html
+++ b/portfolio.html
@@ -49,129 +49,149 @@
       </div>
     </header>
     <main>
-      <section class="projects-section">
-        <h1 class="section-title visually-hidden">Наши проекты</h1>
+      <section class="projects section">
+        <div class="container">
+          <h1 class="section-title visually-hidden">Наши проекты</h1>
 
-        <ul class="projects-filter">
-          <li>
-            <button type="button" class="button-filter button-filter-checked">Все</button>
-          </li>
-          <li><button type="button" class="button-filter">Веб-сайты</button></li>
-          <li><button type="button" class="button-filter">Приложения</button></li>
-          <li><button type="button" class="button-filter">Дизайн</button></li>
-          <li><button type="button" class="button-filter">Маркетинг</button></li>
-        </ul>
+          <ul class="projects-filter">
+            <li class="item">
+              <button type="button" class="button-filter button-filter-checked">Все</button>
+            </li>
+            <li class="item"><button type="button" class="button-filter">Веб-сайты</button></li>
+            <li class="item"><button type="button" class="button-filter">Приложения</button></li>
+            <li class="item"><button type="button" class="button-filter">Дизайн</button></li>
+            <li class="item"><button type="button" class="button-filter">Маркетинг</button></li>
+          </ul>
 
-        <ul class="projects-list">
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-1.jpg"
-                alt="Веб-сайт: Технокряк"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Технокряк</h2>
-              <p class="project-type">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-2.jpg"
-                alt="Дизайн: Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-              <p class="project-type">Дизайн</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-3.jpg"
-                alt="Приложения: Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Ресторан Seafood</h2>
-              <p class="project-type">Приложения</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-4.jpg"
-                alt="Маркетинг: Проект Prime"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Проект Prime</h2>
-              <p class="project-type">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-5.jpg"
-                alt="Приложения: Проект Boxes"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Проект Boxes</h2>
-              <p class="project-type">Приложения</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-6.jpg"
-                alt="Веб-сайт: Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Inspiration has no Borders</h2>
-              <p class="project-type">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-7.jpg"
-                alt="Дизайн: Издание Limited Edition"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Издание Limited Edition</h2>
-              <p class="project-type">Дизайн</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-8.jpg"
-                alt="Маркетинг: Проект LAB"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Проект LAB</h2>
-              <p class="project-type">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project">
-            <a href=""
-              ><img
-                src="./images/project-9.jpg"
-                alt="Приложения: Growing Business"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Growing Business</h2>
-              <p class="project-type">Приложения</p></a
-            >
-          </li>
-        </ul>
+          <ul class="projects-list">
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-1.jpg"
+                  alt="Веб-сайт: Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-2.jpg"
+                  alt="Дизайн: Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-3.jpg"
+                  alt="Приложения: Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-type">Приложения</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-4.jpg"
+                  alt="Маркетинг: Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Проект Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-5.jpg"
+                  alt="Приложения: Проект Boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Проект Boxes</h2>
+                  <p class="project-type">Приложения</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-6.jpg"
+                  alt="Веб-сайт: Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-7.jpg"
+                  alt="Дизайн: Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Издание Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-8.jpg"
+                  alt="Маркетинг: Проект LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Проект LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  src="./images/project-9.jpg"
+                  alt="Приложения: Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="project">
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-type">Приложения</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
