add target to postaddress

--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
         <address>
           <ul class="footer-links">
             <li class="item">
-              <a href="https://goo.gl/maps/YMUEQzxHdwpRwmDM9" class="footer-link post-address"
+              <a
+                href="https://goo.gl/maps/YMUEQzxHdwpRwmDM9"
+                target="_blank"
+                class="footer-link post-address"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
