--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </div>
     </header>
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-section-title">Эффективные решения<br />для вашего бизнеса</h1>
           <button type="button" class="order-button">Заказать услугу</button>
         </div>
       </section>
 
-      <section class="features section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Наши преимущества</h2>
           <ul class="feature list">
