--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <section class="projects section">
+      <section class="section">
         <div class="container">
           <h1 class="section-title visually-hidden">Наши проекты</h1>
 
